Fix notification buttons being invisible

--- a/tgui/packages/tgui-panel/styles/components/Notifications.scss
+++ b/tgui/packages/tgui-panel/styles/components/Notifications.scss
@@ -24,3 +24,7 @@
     margin-bottom: 0;
   }
 }
+
+.Notification .Button {
+  color: white;
+}
